Details
-
Bug
-
Resolution: Done
-
P2: Important
-
5.12.3, 5.13.0, 5.14
-
None
-
macOS Mojave 10.14.5 (18F132)
-
-
2f72083601fb6a4fcc66b6440222291fc334cb3f (qt/qtwebengine/5.13) 15b7a43417e6ae2a3922010524881405ef6b7474 (qt/qtwebengine/5.12)
Description
We've noticed that a WebEngineView will flash when an HTML select element is closed by clicking away from the select element.
We're building an app that uses 5.12.3. We've tried configuring various render properties but haven't improved behavior.
Steps to reproduce
- Install 5.13.0 open source editions
- Edit Qt-5.13.0/Examples/Qt-5.13.0/webengine/minimal/main.qml
- Replace the existing `url` with https://plexinc.github.io/sandbox/matt/bugs/qt/select/
- Build the app in Qt Creator
- Click on the enlarged select element then click elsewhere on the view to close
Expected results
- The select element should close without affecting overall window display
Actual results
- The select element closes
- The surrounding screen flashes
- Selecting a different option instead of clicking away from the select element doesn't reproduce the bug
Examples
- https://user-images.githubusercontent.com/30019/61209324-230e7a00-a695-11e9-9bc8-96fac8e66afa.gif
- https://user-images.githubusercontent.com/30019/61209325-230e7a00-a695-11e9-9763-267472d32183.gif
- This is particularly strange, notice the different behavior when clicking above and below the opened select element: https://user-images.githubusercontent.com/30019/60912532-3d71cf00-a221-11e9-8c1a-b3990ec92240.gif
Important Notes
- I don't believe the issue reproduces when QML is not used. Eg, working directly against a `QWebEngineView`: https://gist.github.com/mseeley/8f2af49d140fa8bea24e96dbf7205c9f
- The flash in 5.12.3 is much more pronounced.
- The color that flashes seems to based on the Light or Dark appearance setting.
Attachments
Issue Links
- relates to
-
QTBUG-78084 Assert when closing select element on macOS
-
- Closed
-
- resulted in
-
QTBUG-82993 HTML dropdown options hidden when Qt.WindowStaysOnTopHint - Regression 5.13.1 -> 5.14.1
-
- Closed
-
For Gerrit Dashboard: QTBUG-77072 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
273075,4 | Fix WebEngineView flashing when closing popup | 5.13 | qt/qtwebengine | Status: MERGED | +2 | 0 |
273570,4 | Fix WebEngineView flashing when closing popup | 5.12 | qt/qtwebengine | Status: MERGED | +2 | 0 |