Fix WebEngineView flashing when closing popup

Closing a popup (eg. HTML select element) might cause WebEngineView to
flash on macOS. This seems to be related to the window's NSPanel
destruction and seems to appear only if the Qt::ToolTip window flag is
set.

Fixes: QTBUG-77072
Fixes: QTBUG-78084
Change-Id: I72af67ee97304278870b312482f8f9058ecd1233
Reviewed-by: Jüri Valdmann <juri.valdmann@qt.io>
(cherry picked from commit 2f72083601fb6a4fcc66b6440222291fc334cb3f)